--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>Bar Inventory Management</title>
+    <title>Gestione Inventario del Bar</title>
     <meta name="description" content="Modern inventory management system for bars and restaurants. Track spirits, beer, wine, mixers, and garnishes with real-time stock alerts.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
