fixed default theme color, and remove auto google translation action

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="google" content="notranslate">
     <title>Gestione Inventario del Bar</title>
     <meta name="description" content="Modern inventory management system for bars and restaurants. Track spirits, beer, wine, mixers, and garnishes with real-time stock alerts.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
